<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.news.NewsFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/newsRecycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/layout_news" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_scrollFlags="scroll|snap" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/colorBackground"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:scrollbars="none"
            app:layout_scrollFlags="enterAlwaysCollapsed">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioGroup
                    android:id="@+id/categoryLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp">

                    <RadioButton
                        android:id="@+id/generalCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="9dp"
                        android:layout_marginStart="9dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:background="@drawable/round_button"
                        android:button="@null"
                        android:checked="true"
                        android:paddingLeft="12dp"
                        android:paddingTop="4dp"
                        android:paddingRight="12dp"
                        android:paddingBottom="4dp"
                        android:tag="@string/category_general"
                        android:text="@string/category_general" />

                    <RadioButton
                        android:id="@+id/entertainmentCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:background="@drawable/round_button"
                        android:button="@null"
                        android:paddingLeft="12dp"
                        android:paddingTop="4dp"
                        android:paddingRight="12dp"
                        android:paddingBottom="4dp"
                        android:tag="@string/category_entertainment"
                        android:text="@string/category_entertainment" />

                    <RadioButton
                        android:id="@+id/businessCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/round_button"
                        android:button="@null"
                        android:paddingLeft="12dp"
                        android:paddingTop="4dp"
                        android:paddingRight="12dp"
                        android:paddingBottom="4dp"
                        android:tag="@string/category_business"
                        android:text="@string/category_business" />

                    <RadioButton
                        android:id="@+id/healthCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/round_button"
                        android:button="@null"
                        android:paddingLeft="12dp"
                        android:paddingTop="4dp"
                        android:paddingRight="12dp"
                        android:paddingBottom="4dp"
                        android:tag="@string/category_health"
                        android:text="@string/category_health" />

                    <RadioButton
                        android:id="@+id/scienceCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/round_button"
                        android:button="@null"
                        android:paddingLeft="12dp"
                        android:paddingTop="4dp"
                        android:paddingRight="12dp"
                        android:paddingBottom="4dp"
                        android:tag="@string/category_science"
                        android:text="@string/category_science" />

                    <RadioButton
                        android:id="@+id/sportsCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginBottom="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/round_button"
                        android:button="@null"
                        android:paddingLeft="12dp"
                        android:paddingTop="4dp"
                        android:paddingRight="12dp"
                        android:paddingBottom="4dp"
                        android:tag="@string/category_sports"
                        android:text="@string/category_sports" />

                    <RadioButton
                        android:id="@+id/technologyCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="3dp"
                        android:layout_marginRight="9dp"
                        android:layout_marginEnd="9dp"
                        android:layout_marginBottom="3dp"
                        android:layout_weight="1"
                        android:background="@drawable/round_button"
                        android:button="@null"
                        android:paddingLeft="12dp"
                        android:paddingTop="4dp"
                        android:paddingRight="12dp"
                        android:paddingBottom="4dp"
                        android:tag="@string/category_technology"
                        android:text="@string/category_technology" />
                </RadioGroup>
            </LinearLayout>
        </HorizontalScrollView>


    </com.google.android.material.appbar.AppBarLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>